fixed ratio on mobile

--- a/index.css
+++ b/index.css
@@ -189,7 +189,7 @@ a:active {
   }
 
   h5 {
-    font-size: 4vmax;
+    font-size: 4vmin;
   }
 
 
